tdf#147109: Optimize ScInterpreter::ScSubstitute

Avoid multiple reallocations, making it freeze for e.g.

  =SUBSTITUTE(REPT(" ";1000000);" ";"")

Change-Id: I269c0b06a0b3cbf9369cc47f33c2eea026b12903
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129252
Tested-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 0b397d8ef0a2615e8e6202804ca2f6cb58436fa5)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/129262
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>